--- a/src/main/resources/templates/atividade/formulario.html
+++ b/src/main/resources/templates/atividade/formulario.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset=utf-8>
 <link src="../../../../dist/output.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
 	crossorigin="anonymous">
@@ -13,69 +14,50 @@
 <body>
 	<div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
 		<div class="relative transform overflow-hidden rounded-lg bg-white px-4 pt-5 pb-4 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-4xl sm:p-6">
-			<form class="grid sm:grid-cols-1 gap-4 formulario" th:object="${requisicaoNovoPaciente}" th:action="@{/paciente/novo}" method="POST">
-				<div th:if="${paciente}">
-					<input type="hidden" readonly id="id" name="id" th:field="*{id}" />
-				</div>
+			<form class="grid sm:grid-cols-1 gap-4 formulario" th:object="${requisicaoNovaAtividade}" th:action="@{/atividades/novo}" method="POST">
 				<div>
-					<h3 class="text-lg font-medium leading-6 text-gray-900">Paciente</h3>
-					<p class="mt-1 text-sm text-gray-500">Informe os dados pessoais</p>
+					<h3 class="text-lg font-medium leading-6 text-gray-900">Atividades</h3>
+					<p class="mt-1 text-sm text-gray-500">Preencha os campos de atividades</p>
 				</div>
 				<div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
 					<div class="sm:col-span-3">
-						<label for="nome" class="block text-sm font-medium text-gray-700">Nome: </label>
+						<label for="titulo" class="block text-sm font-medium text-gray-700">Nome da atividade</label>
 						<div class="mt-1">
-							<input type="text" th:value="${paciente?.nome}" th:field="*{nome}" th:errorClass="is-invalid" autocomplete="nome"
+							<input type="text" th:field="*{titulo}" th:errorClass="is-invalid" autocomplete="titulo"
 								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
-							<div class="invalid-feedback" th:errors="*{nome}">Erro no nome do paciente</div>
+							<div class="invalid-feedback" th:errors="*{titulo}">Erro no titulo da atividade</div>
 						</div>
 					</div>
 
 					<div class="sm:col-span-3">
-						<label for="cpf" class="block text-sm font-medium text-gray-700">Cpf: </label>
+						<label for="data" class="block text-sm font-medium text-gray-700">Data</label>
 						<div class="mt-1">
-							<input type="text" th:field="*{cpf}" th:errorClass="is-invalid" class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
-							<div class="invalid-feedback" th:errors="*{cpf}">Erro no cpf do paciente</div>
+							<input type="text" th:field="*{data}" th:errorClass="is-invalid" autocomplete="data"
+								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
+							<div class="invalid-feedback" th:errors="*{data}">Erro na data da atividade</div>
 						</div>
 					</div>
 
 					<div class="sm:col-span-3">
-						<label for="telefone" class="block text-sm font-medium text-gray-700">Telefone: </label>
+						<label for="descricao" class="block text-sm font-medium text-gray-700">Descrição</label>
 						<div class="mt-1">
-							<input type="text" th:field="*{telefone}" th:errorClass="is-invalid"
+							<input type="text" th:field="*{descricao}" th:errorClass="is-invalid"
 								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
-							<div class="invalid-feedback" th:errors="*{telefone}">Erro no telefone do paciente</div>
+							<div class="invalid-feedback" th:errors="*{descricao}">Erro na descricao da atividade</div>
 						</div>
 					</div>
 
 					<div class="sm:col-span-3">
-						<label for="email" class="block text-sm font-medium text-gray-700">Email: </label>
+						<label for="nota" class="block text-sm font-medium text-gray-700">Nota</label>
 						<div class="mt-1">
-							<input th:field="*{email}" th:errorClass="is-invalid" type="email" autocomplete="email"
+							<input th:field="*{nota}" th:errorClass="is-invalid" type="email" autocomplete="email"
 								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
-							<div class="invalid-feedback" th:errors="*{email}">Erro no email do paciente</div>
+							<div class="invalid-feedback" th:errors="*{nota}">Erro na nota da atividade</div>
 						</div>
 					</div>
 
 					<div class="sm:col-span-2">
-						<label for="atividade" class="block text-sm font-medium text-gray-700">Atividade</label>
-						<div class="mt-1">
-							<input type="text" name="atividade" id="atividade" autocomplete="atividade"
-								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
-						</div>
-					</div>
-
-					<div class="sm:col-span-2">
-						<label for="endereco" class="block text-sm font-medium text-gray-700">Endereço</label>
-						<div class="mt-1">
-							<input type="text" th:field="*{endereco}" th:errorClass="is-invalid" autocomplete="endereco"
-								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
-							<div class="invalid-feedback" th:errors="*{endereco}">Erro no email do paciente</div>
-						</div>
-					</div>
-
-					<div class="sm:col-span-2">
-						<label for="observacao" class="block text-sm font-medium text-gray-700">Observação: </label>
+						<label for="observacao" class="block text-sm font-medium text-gray-700">Observação</label>
 						<div class="mt-1">
 							<input type="text" name="observacao" id="observacao" autocomplete="observacao"
 								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
