--- a/src/main/resources/templates/atividades.html
+++ b/src/main/resources/templates/atividades.html
@@ -16,11 +16,11 @@
 					<div class="px-4 sm:px-6 lg:px-8">
 						<div class="sm:flex sm:items-center">
 							<div class="sm:flex-auto">
-								<h1 class="text-xl font-semibold text-gray-900">Pacientes</h1>
-								<p class="mt-2 text-sm text-gray-700">Gerenciar pacientes</p>
+								<h1 class="text-xl font-semibold text-gray-900">Atividades</h1>
+								<p class="mt-2 text-sm text-gray-700">Gerenciar atividades</p>
 							</div>
 							<div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-								<a href="/paciente/formulario">
+								<a href="/atividades/formulario">
 									<button
 										class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">
 										Cadastrar</button>
@@ -34,30 +34,26 @@
 										<table class="min-w-full divide-y divide-gray-300">
 											<thead class="bg-gray-50">
 												<tr>
-													<th scope="col" class="whitespace-nowrap py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Nome</th>
-													<th scope="col" class="whitespace-nowrap px-2 py-3.5 text-left text-sm font-semibold text-gray-900">Email</th>
-													<th scope="col" class="whitespace-nowrap px-2 py-3.5 text-left text-sm font-semibold text-gray-900">Telefone</th>
-													<th scope="col" class="whitespace-nowrap px-2 py-3.5 text-left text-sm font-semibold text-gray-900">Endereco</th>
+													<th scope="col" class="whitespace-nowrap py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Titulo</th>
+													<th scope="col" class="whitespace-nowrap px-2 py-3.5 text-left text-sm font-semibold text-gray-900">Descrição</th>
+													<th scope="col" class="whitespace-nowrap px-2 py-3.5 text-left text-sm font-semibold text-gray-900">Data</th>
+													<th scope="col" class="whitespace-nowrap px-2 py-3.5 text-left text-sm font-semibold text-gray-900">Nota</th>
 													<th scope="col" class="whitespace-nowrap px-2 py-3.5 text-left text-sm font-semibold text-gray-900">Observação</th>
 												</tr>
 											</thead>
 											<tbody class="divide-y divide-gray-200 bg-white">
-												<tr th:each="paciente : ${pacientes}">
-													<td th:text="${paciente.nome}" class="whitespace-nowrap py-2 pl-4 pr-3 text-sm text-gray-900 sm:pl-6">Roberto</td>
-													<td th:text="${paciente.email}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-900">roberto@mail.com</td>
-													<td th:text="${paciente.telefone}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-500">43464544</td>
-													<td th:text="${paciente.endereco}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-500">Endereco</td>
-													<td th:text="${paciente.observacao}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-500">array tbm</td>
+												<tr th:each="atividade : ${atividades}">
+													<td th:text="${atividade.titulo}" class="whitespace-nowrap py-2 pl-4 pr-3 text-sm text-gray-900 sm:pl-6">Correr</td>
+													<td th:text="${atividade.descricao}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-900">Muito</td>
+													<td th:text="${atividade.data}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-500">01/01/2000</td>
+													<td th:text="${atividade.nota}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-500">9.4</td>
+													<td th:text="${atividade.observacao}" class="whitespace-nowrap px-2 py-2 text-sm text-gray-500">Alguma coisa</td>
 													<td class="relative whitespace-nowrap py-2 pl-1 pr-2 text-right text-sm font-medium sm:pr-6">
-														<form action="#" th:action="@{atividades/{idPaciente}(idPaciente=${paciente.id})}" th:method="GET">
-															<button type="submit" class="text-indigo-600 hover:text-indigo-900">Atividades</button>
-														</form>
-														|
-														<form action="#" th:action="@{paciente/editar/{id}(id=${paciente.id})}" th:method="PUT">
+														<form action="#" th:action="@{editar/{id}(id=${atividade.id})}">
 															<button type="submit" class="text-indigo-600 hover:text-indigo-900">Editar</button>
 														</form>
 														|
-														<form action="#" th:action="@{paciente/remover/{id}(id=${paciente.id})}" th:method="DELETE">
+														<form action="#" th:action="@{remover/{id}(id=${atividade.id})}">
 															<button type="submit" class="text-indigo-600 hover:text-indigo-900">Remover</button>
 														</form>
 													</td>
@@ -69,7 +65,6 @@
 							</div>
 						</div>
 					</div>
-
 				</main>
 			</div>
 		</div>
