--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../../../../dist/output.css" rel="stylesheet" />
 <script src="https://cdn.tailwindcss.com"></script>
@@ -14,7 +13,7 @@
 		<div class="flex flex-1 flex-col justify-center py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
 			<div class="mx-auto w-full max-w-sm lg:w-96">
 				<div>
-					<img class="h-20 w-auto" src="../img/logoaba.png" alt="ABAManager">
+					<img class="h-20 w-auto" src="../img/logoaba.png" alt="ABAManager"/>
 					<h2 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Logar no sistema</h2>
 				</div>
 
