--- a/src/main/resources/templates/paciente/editar-paciente.html
+++ b/src/main/resources/templates/paciente/editar-paciente.html
@@ -13,10 +13,8 @@
 <body>
 	<div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
 		<div class="relative transform overflow-hidden rounded-lg bg-white px-4 pt-5 pb-4 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-4xl sm:p-6">
-			<form class="grid sm:grid-cols-1 gap-4 formulario" th:object="${requisicaoNovoPaciente}" th:action="@{/paciente/novo}" method="POST">
-				<div th:if="${paciente}">
-					<input type="hidden" readonly id="id" name="id" th:field="*{id}" />
-				</div>
+			<form class="grid sm:grid-cols-1 gap-4 formulario" th:object="${paciente}" action="/paciente/salvar" method="POST">
+				<input type="hidden" readonly id="id" name="id" th:field="*{id}" />
 				<div>
 					<h3 class="text-lg font-medium leading-6 text-gray-900">Paciente</h3>
 					<p class="mt-1 text-sm text-gray-500">Informe os dados pessoais</p>
@@ -25,7 +23,7 @@
 					<div class="sm:col-span-3">
 						<label for="nome" class="block text-sm font-medium text-gray-700">Nome: </label>
 						<div class="mt-1">
-							<input type="text" th:value="${paciente?.nome}" th:field="*{nome}" th:errorClass="is-invalid" autocomplete="nome"
+							<input type="text" th:field="*{nome}" th:errorClass="is-invalid" autocomplete="name"
 								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
 							<div class="invalid-feedback" th:errors="*{nome}">Erro no nome do paciente</div>
 						</div>
@@ -75,9 +73,9 @@
 					</div>
 
 					<div class="sm:col-span-2">
-						<label for="observacao" class="block text-sm font-medium text-gray-700">Observação: </label>
+						<label for="observacao" class="block text-sm font-medium text-gray-700">Observação</label>
 						<div class="mt-1">
-							<input type="text" name="observacao" id="observacao" autocomplete="observacao"
+							<input type="text" th:field="*{observacao}" id="observacao" autocomplete="observacao"
 								class="p-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm border h-7" />
 						</div>
 					</div>
